# stockwise

./: .env.example  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: advanced.md  changelog.md  cmd-analyze.md  cmd-backtest.md  cmd-compare.md  cmd-portfolio.md  cmd-screen.md  cmd-watch.md  index.md  industry-cycle.md  profiles.md  quickstart.md  sell-signals.md
stockwise/: __main__.py  backtest.py  cli.py  config.py  hk_universe.py  industry.py  screening.py  visualize.py  watchlist.py
stockwise/analyzer/: llm.py  scorer.py  sell_signals.py
stockwise/data/: business_segments.py  cache.py  fetcher.py  governance.py  hk_governance.py  holders.py  industry_cycle.py  industry_roe.py  market.py  models.py  tushare_extra.py  validator.py
stockwise/report/: generator.py  template.md.j2
stockwise/web/: __init__.py  __main__.py  app.py
stockwise/web/templates/: _base.html  portfolio.html  stock.html  watchlist.html
tests/: test_hk_governance.py  test_industry_cycle.py  test_llm_parse.py  test_market.py  test_profile_routing.py  test_rating_self_consistency.py  test_scorer.py  test_sell_signals.py
