[project]
name = "stockwise"
version = "0.13.3"
description = "巴菲特/林奇范式 A 股 + 港股价值投资分析工具：行业 ROE 段独立渲染 + 行业映射扩展（40+ 行业）"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18",
    "anthropic>=0.98",
    "openai>=1.40",
    "baostock>=0.8",
    "yfinance>=0.2",
    "tushare>=1.4",
    "click>=8.1",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "markdown>=3.5", "python-multipart>=0.0.6"]

[project.scripts]
stockwise = "stockwise.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stockwise*"]

[tool.setuptools.package-data]
stockwise = ["report/*.j2", "web/templates/*.html"]
